k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  ports:
    - port: 5000
      protocol: TCP
  type: ClusterIP
  selector:
    app: flask-app
